o fix broken alignment due text-alignment inherit o fixed duplicate ids
git-svn-id: https://j-wings.svn.sourceforge.net/svnroot/j-wings/trunk/wings2@2571 c8af5dc8-8010-0410-93ac-e0f74e17e1d8

--- a/src/res/org/wings/plaf/css/gecko.css
+++ b/src/res/org/wings/plaf/css/gecko.css
@@ -25,7 +25,7 @@ table, td, th {
     margin: 0px;
     border: none;
     border-spacing: 0px;
-    text-align: inherit;
+    /*text-align: inherit; breaks layouting of DIVs inside TD */
 }
 
 /* tables inherit certain properties from their parents. These need to be
